# LinuxAppDev

03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile  fun.c  prog.c
05_Environmental/: CMakeLists.txt  pcre_utils.c  pcre_utils.h  window.c
05_Environmental/demos/: Window.c  pcredemo.c
06_Debugging/: Makefile  double_free_prog.c
07_DebuggingTracing/: Makefile  fake_unlinkat.c
08_TestingCoverage/: Makefile  buf.h
08_TestingCoverage/tests/: clear.ts  grow.ts  init.ts  pop.ts  push.ts
09_I18nL10n/po/: number_diviner.ru.po
10_Documenting/: DoxyFile  Makefile  README.md  number_diviner.c  roman.c  roman.h
10_Documenting/po/: number_diviner.pot  number_diviner.ru.po
11_Toolkits/: Makefile  text.txt  word_freq.c
12_ScriptingText/: Makefile  configure.ac  prog.c
12_ScriptingText/src/: const.c  fun.c  outlib.h  prog.c
13_PatchInstall/: Makefile  README.md  number_diviner.c
13_PatchInstall/po/: number_diviner.pot
